--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -16,6 +16,7 @@
 @import 'vendor/bootstrap';
 @import 'vendor/fontawesome';
 @import 'vendor/outdated';
+// @import 'vendor/slick';
 // @import 'vendor/animate';
 
 // -----------------------------------------------------------------|
