--- a/app/css/config/vars/_colours.scss
+++ b/app/css/config/vars/_colours.scss
@@ -7,6 +7,10 @@
 // ---------------------------------|
 $color-white: #fff;
 $color-black: #000;
+$color-success: #5cb85c;
+$color-info: #5bc0de;
+$color-warning: #f0ad4e;
+$color-danger: #d9534f;
 
 // GREYS
 // ---------------------------------|
@@ -24,6 +28,7 @@ $color-bb: #bbb;
 $color-cc: #ccc;
 $color-dd: #ddd;
 $color-ee: #eee;
+$color-ff: #fff;
 
 // THEME
 // ---------------------------------|
