--- a/app/css/config/vars/_type.scss
+++ b/app/css/config/vars/_type.scss
@@ -37,8 +37,15 @@ $type-space-loosest: .1em;
 // -----------------------------------------------------------------|
 // TYPE WEIGHTS
 // -----------------------------------------------------------------|
+$type-weight-1: 100;
+$type-weight-2: 200;
+$type-weight-3: 300;
 $type-weight-4: 400;
+$type-weight-5: 500;
+$type-weight-6: 600;
 $type-weight-7: 700;
+$type-weight-8: 800;
+$type-weight-9: 900;
 
 // -----------------------------------------------------------------|
 // TYPE STYLE
