--- a/app/jade/layouts/default/_default.jade
+++ b/app/jade/layouts/default/_default.jade
@@ -58,7 +58,7 @@ html(class='no-js' lang= siteLang)
 		//- -------------------------|
 		include /layouts/default/partials/_header
 
-		//- #CONTENT BLOCK
+		//- <MAIN#CONTENT> BLOCK
 		//- -------------------------|
 		block content
 
