--- a/app/jade/mixins/_mixins.jade
+++ b/app/jade/mixins/_mixins.jade
@@ -3,6 +3,14 @@
 //- -----------------------------------------------------------------|
 //- Contains all mixins used in our project.
 
+//- HELPER MIXINS
+//- ---------------------------------|
+include /mixins/_helpers
+
 //- SHARETHIS MIXIN
 //- ---------------------------------|
 include /mixins/_shareThis
+
+//- FACEBOOK SHARER MIXIN
+//- ---------------------------------|
+include /mixins/_fbSharer
