--- a/app/jade/variables/_variables.jade
+++ b/app/jade/variables/_variables.jade
@@ -8,6 +8,7 @@
 - var siteName = 'Site'
 - var siteUrl = 'http://www.mysite.com'
 - var siteLang = 'en'
+- var siteAnalytics = 'UA-XXXXX-X'
 
 //- FACEBOOK META
 //- ---------------------------------|
@@ -17,5 +18,5 @@
 
 //- TWITTER META
 //- ---------------------------------|
-- var twitterName = '@Username'
+- var twitterName = 'Username'
 - var twitterUrl = 'http://www.twitter.com/' + twitterName
