--- a/app/jade/layouts/default/inc/_foot.jade
+++ b/app/jade/layouts/default/inc/_foot.jade
@@ -35,4 +35,4 @@ script.
 	e=o.createElement(i);r=o.getElementsByTagName(i)[0];
 	e.src='//www.google-analytics.com/analytics.js';
 	r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-	ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+	ga('create','#{siteAnalytics}','auto');ga('send','pageview');
