Refactor SCSS + Fix Jade Mixins
SCSS
- Add some custom mixins
- Add some custom placeholders
- Add some custom variables
- Add responsive headings

JADE
- Add a Days of the Week dropdown mixin
- Add support for French placeholders in dropdowns
- Remove redundant & unused blocks

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -6,9 +6,9 @@
 // -----------------------------------------------------------------|
 // CONFIG
 // -----------------------------------------------------------------|
-@import 'config/vars';
-@import 'config/placeholders';
-@import 'config/mixins';
+@import 'config/vars/vars';
+@import 'config/placeholders/placeholders';
+@import 'config/mixins/mixins';
 
 // -----------------------------------------------------------------|
 // VENDOR
