--- a/app/css/config/vars/_zindex.scss
+++ b/app/css/config/vars/_zindex.scss
@@ -3,9 +3,8 @@
 // -----------------------------------------------------------------|
 // Contains our zxindex scale variables available throughout our project.
 
-// -----------------------------------------------------------------|
-// Z-INDEX SCALE
-// -----------------------------------------------------------------|
+// INITIAL SCALE
+// ---------------------------------|
 $zIndex-1: 100;
 $zIndex-2: 200;
 $zIndex-3: 300;
