--- a/app/css/modules/_forms.scss
+++ b/app/css/modules/_forms.scss
@@ -15,3 +15,10 @@ label {
 		font-size: $type-base;
 	}
 }
+
+// -----------------------------------------------------------------|
+// INPUTS
+// -----------------------------------------------------------------|
+.form-control {
+	// @include placeholder;
+}
