--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -35,7 +35,16 @@ block content
 		+hlpMonths('className')
 		+hlpMonths('className', 'fr')
 		+hlpDays('className')
+		+hlpWeekdays('className')
+		+hlpWeekdays('className', 'fr')
 		+shareThis('facebook', true)
 		+shareThis('twitter')
 		+fbSharer(true)
 		+fbSharer
+		h1 Test
+		h2 Test
+		h3 Test
+		h4 Test
+		h5 Test
+		h6 Test
+		hr
