--- a/app/css/config/placeholders/_placeholders.scss
+++ b/app/css/config/placeholders/_placeholders.scss
@@ -2,3 +2,7 @@
 //	CUSTOM PLACEHOLDERS
 // -----------------------------------------------------------------|
 // Custom placeholders that can be used via @extend
+
+// GRID PLACEHOLDERS
+// ---------------------------------|
+@import 'grid';
