--- a/app/css/modules/_typography.scss
+++ b/app/css/modules/_typography.scss
@@ -55,6 +55,67 @@ h4,
 h5,
 h6 {
 	font-family: $type-heading;
+	font-weight: $type-weight-7;
 }
 
+h1 {
+	$sizeFix: ceil($font-size-h1 / 1.5);
+	@include fontSize($sizeFix);
 
+	// TABLET
+	// ---------------------------------|
+	@include bp(sm) {
+		@include fontSize($font-size-h1);
+	}
+}
+
+h2 {
+	$sizeFix: ceil($font-size-h2 / 1.4);
+	@include fontSize($sizeFix);
+
+	// TABLET
+	// ---------------------------------|
+	@include bp(sm) {
+		@include fontSize($font-size-h2);
+	}
+}
+
+h3 {
+	$sizeFix: ceil($font-size-h3 / 1.3);
+	@include fontSize($sizeFix);
+
+	// TABLET
+	// ---------------------------------|
+	@include bp(sm) {
+		@include fontSize($font-size-h3);
+	}
+}
+
+h4 {
+	$sizeFix: ceil($font-size-h4 / 1.2);
+	@include fontSize($sizeFix);
+
+	// TABLET
+	// ---------------------------------|
+	@include bp(sm) {
+		@include fontSize($font-size-h4);
+	}
+}
+
+h5 {
+	$sizeFix: ceil($font-size-h5 / 1.1);
+	@include fontSize($sizeFix);
+
+	// TABLET
+	// ---------------------------------|
+	@include bp(sm) {
+		@include fontSize($font-size-h5);
+	}
+}
+
+// -----------------------------------------------------------------|
+// MISCELLANEOUS
+// -----------------------------------------------------------------|
+hr {
+	border-color: $color-dd;
+}
