Node SASS, SCSS Adjustments
- Switch to Libsass (node-sass through grunt-sass) for faster compiling
time! Seems to be at feature parity for what the framework should need -
for now.
- Placeholders are going to be project specific, so move grids helpers
into their own mixins
- Fix responsive type for buttons/forms
- Add a Kitchen Sink mixin to Jade mixins
- Add some bootstrap variable defaults throughout + add an override file
- General cleanup

--- a/app/css/components/_myComponent.scss
+++ b/app/css/components/_myComponent.scss
@@ -1,6 +1,7 @@
 // -----------------------------------------------------------------
-//	ALL COMPONENTS
+//	MY COMPONENT
 // -----------------------------------------------------------------
+// Useful description about the component and what it does.
 
 .myComponent {
 
