--- a/app/css/config/placeholders/_placeholders.scss
+++ b/app/css/config/placeholders/_placeholders.scss
@@ -1,8 +1,5 @@
 // -----------------------------------------------------------------|
 //	CUSTOM PLACEHOLDERS
 // -----------------------------------------------------------------|
-// Custom placeholders that can be used via @extend
+// Custom placeholders that can be used via @extend - usually project specific.
 
-// GRID PLACEHOLDERS
-// ---------------------------------|
-@import 'grid';
