--- a/app/css/modules/_buttons.scss
+++ b/app/css/modules/_buttons.scss
@@ -2,3 +2,13 @@
 //	BUTTON MODULES
 // -----------------------------------------------------------------|
 // All overwrites & resets for common button elements.
+
+.btn {
+	@include fontSize($type-small);
+
+	// TABLET
+	// ---------------------------------|
+	@include bp(sm) {
+		@include fontSize($type-base);
+	}
+}
