--- a/app/jade/mixins/_mixins.jade
+++ b/app/jade/mixins/_mixins.jade
@@ -14,3 +14,7 @@ include /mixins/_shareThis
 //- FACEBOOK SHARER MIXIN
 //- ---------------------------------|
 include /mixins/_fbSharer
+
+//- KITCHEN SINK MIXIN
+//- ---------------------------------|
+include /mixins/_kitchensink
