--- a/app/jade/mixins/_kitchenSink.jade
+++ b/app/jade/mixins/_kitchenSink.jade
@@ -132,3 +132,8 @@ mixin kitchenSink()
 			label FB Sharer (No Icon)
 			+fbSharer
 		.col-sm-4
+			label Responsive Image (srcset)
+			+hlpSrcset('test', 'Alt test', 'img-responsive')
+
+			label Responsive Image (picture)
+			+hlpPicture('test', 'Alt test', 'img-responsive')
