--- a/app/jade/layouts/default/inc/_foot.jade
+++ b/app/jade/layouts/default/inc/_foot.jade
@@ -22,6 +22,7 @@ script(src='../bower_components/bootstrap-sass-official/assets/javascripts/boots
 script(src='../bower_components/outdated-browser/outdatedbrowser/outdatedbrowser.min.js')
 script(src='../bower_components/respond/dest/respond.src.js')
 script(src='../bower_components/fastclick/lib/fastclick.js')
+script(src='../bower_components/respimage/respimage.js')
 // endbower
 // endbuild
 
