--- a/app/jade/mixins/_kitchenSink.jade
+++ b/app/jade/mixins/_kitchenSink.jade
@@ -133,7 +133,7 @@ mixin kitchenSink()
 			+fbSharer
 		.col-sm-4
 			label Responsive Image (srcset)
-			+hlpSrcset('test', 'Alt test', 'img-responsive')
+			+hlpSrcset('', 'test', 'Alt test', 'img-responsive')
 
 			label Responsive Image (picture)
-			+hlpPicture('test', 'Alt test', 'img-responsive')
+			+hlpPicture('matt/', 'matt', 'Alt test', 'img-responsive')
