--- a/app/jade/mixins/_kitchenSink.jade
+++ b/app/jade/mixins/_kitchenSink.jade
@@ -136,4 +136,4 @@ mixin kitchenSink()
 			+hlpSrcset('', 'test', 'Alt test', 'img-responsive')
 
 			label Responsive Image (picture)
-			+hlpPicture('matt/', 'matt', 'Alt test', 'img-responsive')
+			+hlpPicture('sub/', 'sub-test', 'Alt test', 'img-responsive')
