--- a/app/jade/layouts/default/inc/_head.jade
+++ b/app/jade/layouts/default/inc/_head.jade
@@ -6,7 +6,8 @@
 
 meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible' content='IE=edge')
-meta(name='viewport' content='width=device-width, initial-scale=1')
+- if siteResponsive
+	meta(name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no')
 
 // build:css(.tmp) css/app.css
 link(href='css/app.css', rel='stylesheet')
