--- a/app/jade/variables/_variables.jade
+++ b/app/jade/variables/_variables.jade
@@ -9,6 +9,7 @@
 - var siteUrl = 'http://www.mysite.com'
 - var siteLang = 'en'
 - var siteAnalytics = 'UA-XXXXX-X'
+- var siteResponsive = true
 
 //- FACEBOOK META
 //- ---------------------------------|
