Remove extra h6 tag
- Remove h6 closing tag in outdated browser jade partial

--- a/app/jade/layouts/default/partials/_outdated.jade
+++ b/app/jade/layouts/default/partials/_outdated.jade
@@ -4,7 +4,7 @@
 //- Contains all HTML for the Outdated Browser plugin.
 
 #outdated
-	h6 Your browser is out-of-date!</h6>
+	h6 Your browser is out-of-date!
 	p Update your browser to view this website correctly. #[a#btnUpdateBrowser(href='http://outdatedbrowser.com/' target='_blank') Update my browser now]
 	p.last
 		a#btnCloseUpdateBrowser(href='#' title='Close') &times;
