Add spacing vars to SASS, fix Gruntfile
- Add spacing.scss to SASS variables (can be used to create project wide
margin/padding spacing from a single variable)
- Fixed Gruntfile.js to watch all SASS files instead of just one level
deep.
- Added grunt-jsbeautifier to clean up output of compiled Jade files
when building a flat site with a CMS (easier for the backend guys to
navigate through)

--- a/app/css/config/vars/_vars.scss
+++ b/app/css/config/vars/_vars.scss
@@ -11,6 +11,10 @@
 // ---------------------------------|
 @import 'type';
 
+// SPACING VARIABLES
+// ---------------------------------|
+@import 'spacing';
+
 // Z-INDEX VARIABLES
 // ---------------------------------|
 @import 'zindex';
