Add utility classes, extra spacing
- Add utility classes for common use cases such as font colours,
margins/paddings, and floats. In the future add more in (refer to BEM
utility classes).
- Add in an extra spacing var.

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -27,6 +27,7 @@
 @import 'modules/typography';
 @import 'modules/buttons';
 @import 'modules/forms';
+@import 'modules/utilities';
 @import 'modules/misc';
 
 // -----------------------------------------------------------------|
