--- a/app/css/config/vars/_spacing.scss
+++ b/app/css/config/vars/_spacing.scss
@@ -13,6 +13,7 @@ $space-25: 25px;
 $space-30: 30px;
 $space-35: 35px;
 $space-40: 40px;
+$space-50: 50px;
 
 // SET DEFAULT VALUE (LOWEST)
 // ---------------------------------|
