Utilities, Deps, Colours, + More
- Added some more useful utility classes such as widths, background
colours.
- Added lists and tables modules for resets when needed.
- Updated npm deps and bower deps.
- Added modal mixin for quick modals.
- General gruntfile cleanup.

TODO
- Clean up and rework Readme
- Add more common resets and modules (custom checkboxes/radios, disabled
styles, more kitchen sink elements, common components)

--- a/app/css/config/vars/_colours.scss
+++ b/app/css/config/vars/_colours.scss
@@ -30,6 +30,19 @@ $color-dd: #ddd;
 $color-ee: #eee;
 $color-ff: #fff;
 
+// SOCIAL MEDIA
+// ---------------------------------|
+$color-facebook: #3b5998;
+$color-twitter: #00aced;
+$color-googleplus: #dd4b39;
+$color-youtube: #b00;
+$color-linkedin: #007bb6;
+$color-pinterest: #cb2027;
+$color-instagram: #517fa4;
+$color-flickr: #ff0084;
+$color-tumblr: #32506d;
+$color-vine: #00bf8f;
+
 // THEME
 // ---------------------------------|
 $color-alpha: $color-black;
